提交用户、订户信息增删改查方法

--- a/NhryService/src/main/webapp/swagger/index.html
+++ b/NhryService/src/main/webapp/swagger/index.html
@@ -38,7 +38,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost:8080/NhryService/rest/api-docs";
+        url = "/NhryService/rest/api-docs";
       }
 
       hljs.configure({
