--- a/NhryService/src/main/webapp/swagger/index.html
+++ b/NhryService/src/main/webapp/swagger/index.html
@@ -46,6 +46,8 @@
           		url = "/NhryService/api/v1/api-docs";
           }else if(_url.indexOf("xiexiaojun") != -1){
           		url = "/xiexiaojun/api/v1/api-docs";
+          }else if(_url.indexOf("master") != -1){
+          		url = "/master/api/v1/api-docs";
           }
       }
       hljs.configure({
