修改订户添加默认地址功能

--- a/NhryService/src/main/webapp/swagger/index.html
+++ b/NhryService/src/main/webapp/swagger/index.html
@@ -48,6 +48,8 @@
           		url = "/xiexiaojun/api/v1/api-docs";
           }else if(_url.indexOf("master") != -1){
           		url = "/master/api/v1/api-docs";
+          }else if(_url.indexOf("b-service") != -1){
+          		url = "/b-service/api/v1/api-docs";
           }
       }
       hljs.configure({
